# ChatRustic

./: Cargo.toml  README.MD
src/: chat.rs  main.rs
