[package]
name = "ChatRustic"
version = "0.1.0"
authors = ["Dominik Kondrot"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
